--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 A C# programming project completed through my school.  It has been created as a GUI application with menu choices and various options 
 to navigate employee bonus choices, a contact page, etc., for an imaginary company.  The code was written and GUI setup within the 
-Visual Studio 2019 application.  It requires a few datasets for some aspects to function, which were also created within Visual Studio.
+Visual Studio 2019 IDE.  It requires a few datasets for some aspects to function, which were also created within Visual Studio.
